--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,36 @@
-.App {
-  text-align: center;
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #fff4e6;
+  font-family: 'Roboto', sans-serif;
+  height: 3000px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+/* HEADER */
+.header {
+  background-color: #fceca4;
+  padding: 7px;
+  display: flex
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.right {
+  flex: 1;
+  padding: 15px;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-family: 'Slabo 27px', serif;
+  font-weight: 700;
+  transform: rotateX(180deg);
+  transition: all .7s linear;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.right:hover {
+  transform: rotate(0)
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left {
+  padding: 10px;
+  font-size: .7rem;
+  font-weight: blod
 }
